forgot our menu

--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,7 @@
          </div>
     </nav>
 </header>
+<p id="our-menu" class="text-center">Our Menu</p>
 <div id="main-content" class="container-fluid">
     <div id="main-menu" class="row">
         <div class='col-md-4 col-sm-6 col-xs-12'>
